[gd_scene load_steps=3 format=3 uid="uid://bhjuxvebimqov"]

[ext_resource type="Script" uid="uid://coupdpnhilc0d" path="res://Scripts/combo_manager.gd" id="1_bhqmy"]
[ext_resource type="PackedScene" uid="uid://dgb361xj37pqy" path="res://Other/Scenes/sfx_manager.tscn" id="2_f8dp8"]

[node name="Combo Manager" type="Node2D"]
script = ExtResource("1_bhqmy")

[node name="timer_combo_streak_active" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="sfx_manager" parent="." instance=ExtResource("2_f8dp8")]

[connection signal="timeout" from="timer_combo_streak_active" to="." method="_on_timer_combo_streak_active_timeout"]
